fix(home): fix layout anomalies caused by unaligned bookmark height

--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -95,6 +95,7 @@ a {
   float: left;
   width: 16.66%;
   padding: 1px;
+  height: 25px;
   box-sizing: border-box;
 }
 
